--- a/layanan.html
+++ b/layanan.html
@@ -1,251 +1,328 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layanan | Assistenku</title>
-  <link rel="stylesheet" href="/styles.css">
-</head>
-
-<body>
-
-<header>
-  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
-
-  <div class="navbar">
-    <img src="/logo.png" class="logo" alt="Logo Assistenku">
-
-    <nav>
-      <ul>
-        <li><a href="/">Beranda</a></li>
-        <li><a href="/profil">Profil</a></li>
-        <li><a href="/layanan" class="active">Layanan</a></li>
-        <li><a href="/karir">Karir</a></li>
-        <li><a href="/kontak">Kontak</a></li>
-      </ul>
-    </nav>
-
-    <div id="menuIcon">☰</div>
-  </div>
-
-  <div id="mobileMenu">
-    <a href="/">Beranda</a>
-    <a href="/profil">Profil</a>
-    <a href="/layanan">Layanan</a>
-    <a href="/karir">Karir</a>
-    <a href="/kontak">Kontak</a>
-  </div>
-</header>
-
-<section class="page-section" style="padding-top:160px;">
-  <h1>Layanan Kami</h1>
-  <p>
-    Assistenku menyediakan layanan asistensi profesional untuk rumah tangga,
-    individu, hingga operasional bisnis. Semua tenaga melalui proses seleksi,
-    wawancara, dan pelatihan dasar.
-  </p>
-</section>
-
 <section id="DaftarLayanan">
+
+  <!-- =============================== -->
+  <!-- 1. TRANSPORTASI (Segera Hadir) -->
+  <!-- =============================== -->
+  <h1 class="category-title">TRANSPORTASI <span class="soon">(Segera Hadir)</span></h1>
 
   <!-- 1. Ojek Motor -->
   <div class="service-card">
-    <h2>Ojek Motor <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Transportasi motor cepat dan fleksibel untuk mobilitas harian Anda.
-    </p>
+    <h2>Ojek Motor</h2>
+    <p>Transportasi motor cepat dan fleksibel untuk mobilitas harian.</p>
     <ul>
       <li>Pengantaran cepat</li>
       <li>Aman & profesional</li>
       <li>Cocok untuk perjalanan mendadak</li>
       <li>Harga transparan</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Halo%20saya%20ingin%20memesan%20Ojek%20Motor" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Ojek%20Motor" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Ojek%20Motor">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Ojek%20Motor">
+        Email Kami
+      </a>
+    </div>
   </div>
 
   <!-- 2. Taksi Mobil -->
   <div class="service-card">
-    <h2>Taksi Mobil <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Solusi transportasi mobil yang nyaman dan aman untuk keluarga dan bisnis.
-    </p>
+    <h2>Taksi Mobil</h2>
+    <p>Transportasi mobil nyaman dan aman untuk kebutuhan keluarga dan bisnis.</p>
     <ul>
       <li>Mobil bersih & terawat</li>
       <li>Driver berpengalaman</li>
-      <li>Tersedia untuk jarak jauh</li>
-      <li>Bisa request mobil</li>
+      <li>Tersedia perjalanan jauh</li>
+      <li>Bisa request tipe mobil</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Taksi%20Mobil" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Taksi%20Mobil" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Taksi%20Mobil">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Taksi%20Mobil">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 3. Teknisi Rumah & Elektronik -->
+  <!-- 3. Driver Pribadi -->
   <div class="service-card">
-    <h2>Teknisi Rumah & Elektronik <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Teknisi profesional untuk perbaikan rumah dan perangkat elektronik.
-    </p>
+    <h2>Driver Pribadi</h2>
+    <p>Layanan sopir pribadi profesional, ramah, dan siap menemani perjalanan Anda.</p>
+    <ul>
+      <li>Pengemudi berpengalaman & amanah</li>
+      <li>Bisa harian, mingguan, atau bulanan</li>
+      <li>Siap perjalanan dalam & luar kota</li>
+      <li>Paham rute & etika berkendara</li>
+    </ul>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Driver%20Pribadi">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Driver%20Pribadi">
+        Email Kami
+      </a>
+    </div>
+  </div>
+
+  <!-- ========================================== -->
+  <!-- 2. SERVICE & PERBAIKAN (Segera Hadir)      -->
+  <!-- ========================================== -->
+  <h1 class="category-title">SERVICE & PERBAIKAN <span class="soon">(Segera Hadir)</span></h1>
+
+  <!-- Teknisi Rumah & Elektronik -->
+  <div class="service-card">
+    <h2>Teknisi Rumah & Elektronik</h2>
+    <p>Teknisi profesional untuk perbaikan rumah dan perangkat elektronik.</p>
     <ul>
       <li>Perbaikan peralatan listrik</li>
       <li>Instalasi elektronik</li>
       <li>Maintenance rutin</li>
       <li>Teknisi berpengalaman</li>
     </ul>
-    <a href="https://wa.me/62895363531373?text=Teknisi%20Rumah%20dan%20Elektronik" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Teknisi%20Rumah%20%26%20Elektronik" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Teknisi%20Rumah%20Elektronik">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Teknisi%20Rumah%20Elektronik">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 4. Service Motor & Mobil Keliling -->
+  <!-- Service Motor & Mobil Keliling -->
   <div class="service-card">
-    <h2>Service Motor & Mobil Keliling <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Service panggilan untuk motor dan mobil langsung ke lokasi Anda.
-    </p>
+    <h2>Service Motor & Mobil Keliling</h2>
+    <p>Service panggilan langsung ke lokasi Anda.</p>
     <ul>
       <li>Ganti oli & tune up</li>
-      <li>Cek komponen</li>
+      <li>Pengecekan komponen</li>
       <li>Datang ke lokasi</li>
       <li>Untuk motor & mobil</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Service%20Kendaraan" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Service%20Keliling" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Service%20Motor%20Mobil">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Service%20Motor%20Mobil">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 5. Asisten Rumah Tangga -->
+  <!-- Tukang Bangunan -->
   <div class="service-card">
-    <h2>Asisten Rumah Tangga</h2>
-    <p>
-      Tenaga bantuan rumah tangga profesional dan amanah.
-    </p>
+    <h2>Tukang Bangunan</h2>
+    <p>Layanan tukang bangunan harian dan proyek kecil.</p>
     <ul>
-      <li>Pekerjaan harian rumah</li>
-      <li>Kebersihan, memasak & merapikan</li>
-      <li>Harian atau bulanan</li>
-      <li>Tenaga terlatih</li>
+      <li>Pekerjaan rapi dan aman</li>
+      <li>Harian atau borongan</li>
+      <li>Pemasangan & renovasi ringan</li>
+      <li>Tenaga berpengalaman</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Asisten%20Rumah%20Tangga" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Asisten%20Rumah%20Tangga" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Tukang%20Bangunan">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Tukang%20Bangunan">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 6. Baby Sitter & Perawat Lansia -->
-  <div class="service-card">
-    <h2>Baby Sitter & Perawat Lansia</h2>
-    <p>
-      Tenaga pendamping bayi dan lansia yang aman & bersertifikat.
-    </p>
-    <ul>
-      <li>Menjaga & merawat</li>
-      <li>Membantu aktivitas harian</li>
-      <li>Pengawasan penuh</li>
-      <li>Bersertifikat</li>
-    </ul>
-    <a href="https://wa.me/628989760020?text=Baby%20Sitter%20atau%20Lansia" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Baby%20Sitter%20%26%20Lansia" class="email-btn">Email</a>
-  </div>
+  <!-- ======================================== -->
+  <!-- 3. KIRIM BARANG & JASTIP (Segera Hadir)  -->
+  <!-- ======================================== -->
+  <h1 class="category-title">KIRIM BARANG & JASTIP <span class="soon">(Segera Hadir)</span></h1>
 
-  <!-- 7. Pijat Panggilan -->
+  <!-- Kurir Barang -->
   <div class="service-card">
-    <h2>Pijat Panggilan <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Terapis pijat profesional datang ke rumah Anda.
-    </p>
+    <h2>Kurir Barang</h2>
+    <p>Kurir paket dan dokumen cepat & aman.</p>
     <ul>
-      <li>Terapis pria & wanita</li>
-      <li>Pijat lengkap</li>
-      <li>Aman & steril</li>
-      <li>Datang ke lokasi</li>
-    </ul>
-    <a href="https://wa.me/628989760020?text=Pijat%20Panggilan" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Pijat%20Panggilan" class="email-btn">Email</a>
-  </div>
-
-  <!-- 8. Kurir Barang -->
-  <div class="service-card">
-    <h2>Kurir Barang <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Kurir paket dan dokumen cepat & aman.
-    </p>
-    <ul>
-      <li>Pengiriman cepat</li>
       <li>Pick-up lokasi Anda</li>
+      <li>Pengiriman cepat</li>
       <li>Tracking sederhana</li>
       <li>Harga transparan</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Kurir%20Barang" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Kurir%20Barang" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Kurir%20Barang">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Kurir%20Barang">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 9. Belanja Titipan -->
+  <!-- Belanja Titipan -->
   <div class="service-card">
-    <h2>Belanja Titipan / Jastip <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Titip belanja harian & barang tertentu dengan cepat.
-    </p>
+    <h2>Belanja Titipan / Jastip</h2>
+    <p>Layanan titip belanja harian & barang tertentu.</p>
     <ul>
       <li>Belanja harian</li>
       <li>Barang tertentu</li>
       <li>Proses cepat</li>
       <li>Transparan</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Titip%20Belanja" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Belanja%20Titipan" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Belanja%20Titipan">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Belanja%20Titipan">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 10. Cleaning Service -->
+  <!-- ================================ -->
+  <!-- 4. LAYANAN JASA UMUM (Segera Hadir) -->
+  <!-- ================================ -->
+  <h1 class="category-title">LAYANAN JASA UMUM <span class="soon">(Segera Hadir)</span></h1>
+
+  <!-- Asisten Rumah Tangga -->
+  <div class="service-card">
+    <h2>Asisten Rumah Tangga</h2>
+    <p>Tenaga bantuan rumah tangga profesional.</p>
+    <ul>
+      <li>Pekerjaan harian rumah</li>
+      <li>Kebersihan, memasak & merapikan</li>
+      <li>Harian atau bulanan</li>
+      <li>Tenaga terlatih</li>
+    </ul>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Asisten%20Rumah%20Tangga">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Asisten%20Rumah%20Tangga">
+        Email Kami
+      </a>
+    </div>
+  </div>
+
+  <!-- Baby Sitter & Perawat Lansia -->
+  <div class="service-card">
+    <h2>Baby Sitter & Perawat Lansia</h2>
+    <p>Tenaga pendamping bayi dan lansia bersertifikat.</p>
+    <ul>
+      <li>Menjaga & merawat</li>
+      <li>Membantu aktivitas harian</li>
+      <li>Pengawasan penuh</li>
+      <li>Bersertifikat</li>
+    </ul>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Baby%20Sitter%20Lansia">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Baby%20Sitter%20dan%20Lansia">
+        Email Kami
+      </a>
+    </div>
+  </div>
+
+  <!-- Pijat Panggilan -->
+  <div class="service-card">
+    <h2>Pijat Panggilan</h2>
+    <p>Terapis pijat profesional datang ke rumah Anda.</p>
+    <ul>
+      <li>Terapis pria & wanita</li>
+      <li>Pijat lengkap</li>
+      <li>Aman & steril</li>
+      <li>Datang ke lokasi</li>
+    </ul>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Pijat%20Panggilan">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Pijat%20Panggilan">
+        Email Kami
+      </a>
+    </div>
+  </div>
+
+  <!-- Cleaning Service -->
   <div class="service-card">
     <h2>Cleaning Service</h2>
-    <p>
-      Petugas kebersihan profesional untuk rumah, kost, kantor & event.
-    </p>
+    <p>Petugas kebersihan profesional untuk rumah, kost, kantor & event.</p>
     <ul>
       <li>Pembersihan menyeluruh</li>
       <li>Deep cleaning</li>
       <li>Rapi & ramah</li>
       <li>Peralatan lengkap</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Cleaning%20Service" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Cleaning%20Service" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Cleaning%20Service">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Cleaning%20Service">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 11. Tukang Bangunan -->
-  <div class="service-card">
-    <h2>Tukang Bangunan <span class="soon">(Segera Hadir)</span></h2>
-    <p>
-      Layanan tukang bangunan harian & proyek kecil.
-    </p>
-    <ul>
-      <li>Pekerjaan rapi & aman</li>
-      <li>Harian atau borongan</li>
-      <li>Pemasangan & renovasi ringan</li>
-      <li>Tenaga berpengalaman</li>
-    </ul>
-    <a href="https://wa.me/628989760020?text=Tukang%20Bangunan" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Tukang%20Bangunan" class="email-btn">Email</a>
-  </div>
-
-  <!-- 12. Tenaga Lepas / Asisten Pribadi -->
+  <!-- Tenaga Lepas / Asisten Pribadi -->
   <div class="service-card">
     <h2>Tenaga Lepas / Asisten Pribadi</h2>
-    <p>
-      Tenaga fleksibel untuk bantuan harian & kebutuhan pribadi.
-    </p>
+    <p>Tenaga fleksibel untuk bantuan harian & kebutuhan pribadi.</p>
     <ul>
       <li>Membantu aktivitas harian</li>
       <li>Asisten kerja</li>
       <li>Fleksibel</li>
       <li>Amanah</li>
     </ul>
-    <a href="https://wa.me/628989760020?text=Tenaga%20Lepas%20atau%20Asisten%20Pribadi" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Tenaga%20Lepas" class="email-btn">Email</a>
+
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Tenaga%20Lepas%20Asisten%20Pribadi">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Tenaga%20Lepas">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 13. Pembuatan Website -->
+  <!-- Pembuatan Website -->
   <div class="service-card">
     <h2>Pembuatan Website & Sistem</h2>
-    <p>
-      Website modern, cepat, responsif, dan siap dipakai untuk bisnis.
-    </p>
+    <p>Website modern, cepat, responsif, dan siap pakai untuk bisnis.</p>
     <ul>
       <li>Landing Page</li>
       <li>Website Profil Perusahaan</li>
@@ -262,33 +339,16 @@
       <li><b>Kelas 5 — Enterprise</b></li>
     </ul>
 
-    <a href="https://wa.me/628989760020?text=Butuh%20Website%20atau%20Sistem" class="wa-btn">WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Pembuatan%20Website" class="email-btn">Email</a>
+    <div class="apply-box">
+      <a class="btn-primary" target="_blank"
+         href="https://wa.me/628989760020?text=Pembuatan%20Website%20Sistem">
+        Chat via WhatsApp
+      </a>
+      <a class="btn-secondary"
+         href="mailto:kontakassistenku@gmail.com?subject=Pembuatan%20Website">
+        Email Kami
+      </a>
+    </div>
   </div>
 
-  <!-- 14. Driver Pribadi -->
-  <div class="service-card">
-    <h2>Driver Pribadi</h2>
-    <p>
-      Layanan pengemudi pribadi profesional untuk keperluan harian, perjalanan kerja, atau kebutuhan khusus. Cocok untuk individu, keluarga, maupun bisnis yang membutuhkan pengemudi amanah, sopan, dan tepat waktu.
-    </p>
-    <ul>
-      <li>Pengemudi berpengalaman & amanah</li>
-      <li>Bisa sistem harian, mingguan, atau bulanan</li>
-      <li>Mengemudi aman, rapi, dan profesional</li>
-      <li>Bisa menggunakan mobil pelanggan atau mobil dari Assistenku*</li>
-    </ul>
-
-    <a href="https://wa.me/628989760020?text=Halo%20saya%20butuh%20Driver%20Pribadi" class="wa-btn">Hubungi via WhatsApp</a>
-    <a href="mailto:kontakassistenku@gmail.com?subject=Layanan%20Assistenku%20-%20Driver%20Pribadi" class="email-btn">Kirim Email</a>
-  </div>
-
-  
 </section>
-
-<footer>
-  <p>© 2025 Assistenku. Semua Hak Dilindungi.</p>
-</footer>
-
-</body>
-</html>
