--- a/layanan.html
+++ b/layanan.html
@@ -1,354 +1,226 @@
-<section id="DaftarLayanan">
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Layanan | Assistenku</title>
+  <link rel="stylesheet" href="/styles.css">
+</head>
 
-  <!-- =============================== -->
-  <!-- 1. TRANSPORTASI (Segera Hadir) -->
-  <!-- =============================== -->
-  <h1 class="category-title">TRANSPORTASI <span class="soon">(Segera Hadir)</span></h1>
+<body>
 
-  <!-- 1. Ojek Motor -->
-  <div class="service-card">
-    <h2>Ojek Motor</h2>
-    <p>Transportasi motor cepat dan fleksibel untuk mobilitas harian.</p>
-    <ul>
-      <li>Pengantaran cepat</li>
-      <li>Aman & profesional</li>
-      <li>Cocok untuk perjalanan mendadak</li>
-      <li>Harga transparan</li>
-    </ul>
+<header>
+  <div class="top-header">Assistenku — Kemudahan Ada Dalam Genggaman</div>
 
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Ojek%20Motor">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Ojek%20Motor">
-        Email Kami
-      </a>
-    </div>
+  <div class="navbar">
+    <img src="/logo.png" class="logo" alt="Logo Assistenku">
+
+    <nav>
+      <ul>
+        <li><a href="/">Beranda</a></li>
+        <li><a href="/profil">Profil</a></li>
+        <li><a href="/layanan" class="active">Layanan</a></li>
+        <li><a href="/karir">Karir</a></li>
+        <li><a href="/kontak">Kontak</a></li>
+      </ul>
+    </nav>
+
+    <div id="menuIcon">☰</div>
   </div>
 
-  <!-- 2. Taksi Mobil -->
-  <div class="service-card">
-    <h2>Taksi Mobil</h2>
-    <p>Transportasi mobil nyaman dan aman untuk kebutuhan keluarga dan bisnis.</p>
-    <ul>
-      <li>Mobil bersih & terawat</li>
-      <li>Driver berpengalaman</li>
-      <li>Tersedia perjalanan jauh</li>
-      <li>Bisa request tipe mobil</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Taksi%20Mobil">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Taksi%20Mobil">
-        Email Kami
-      </a>
-    </div>
+  <div id="mobileMenu">
+    <a href="/">Beranda</a>
+    <a href="/profil">Profil</a>
+    <a href="/layanan">Layanan</a>
+    <a href="/karir">Karir</a>
+    <a href="/kontak">Kontak</a>
   </div>
+</header>
 
-  <!-- 3. Driver Pribadi -->
-  <div class="service-card">
-    <h2>Driver Pribadi</h2>
-    <p>Layanan sopir pribadi profesional, ramah, dan siap menemani perjalanan Anda.</p>
-    <ul>
-      <li>Pengemudi berpengalaman & amanah</li>
-      <li>Bisa harian, mingguan, atau bulanan</li>
-      <li>Siap perjalanan dalam & luar kota</li>
-      <li>Paham rute & etika berkendara</li>
-    </ul>
+<section class="page-section" style="padding-top:160px;">
+  <h1>Layanan Kami</h1>
 
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Driver%20Pribadi">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Driver%20Pribadi">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- ========================================== -->
-  <!-- 2. SERVICE & PERBAIKAN (Segera Hadir)      -->
-  <!-- ========================================== -->
-  <h1 class="category-title">SERVICE & PERBAIKAN <span class="soon">(Segera Hadir)</span></h1>
-
-  <!-- Teknisi Rumah & Elektronik -->
-  <div class="service-card">
-    <h2>Teknisi Rumah & Elektronik</h2>
-    <p>Teknisi profesional untuk perbaikan rumah dan perangkat elektronik.</p>
-    <ul>
-      <li>Perbaikan peralatan listrik</li>
-      <li>Instalasi elektronik</li>
-      <li>Maintenance rutin</li>
-      <li>Teknisi berpengalaman</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Teknisi%20Rumah%20Elektronik">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Teknisi%20Rumah%20Elektronik">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Service Motor & Mobil Keliling -->
-  <div class="service-card">
-    <h2>Service Motor & Mobil Keliling</h2>
-    <p>Service panggilan langsung ke lokasi Anda.</p>
-    <ul>
-      <li>Ganti oli & tune up</li>
-      <li>Pengecekan komponen</li>
-      <li>Datang ke lokasi</li>
-      <li>Untuk motor & mobil</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Service%20Motor%20Mobil">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Service%20Motor%20Mobil">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Tukang Bangunan -->
-  <div class="service-card">
-    <h2>Tukang Bangunan</h2>
-    <p>Layanan tukang bangunan harian dan proyek kecil.</p>
-    <ul>
-      <li>Pekerjaan rapi dan aman</li>
-      <li>Harian atau borongan</li>
-      <li>Pemasangan & renovasi ringan</li>
-      <li>Tenaga berpengalaman</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Tukang%20Bangunan">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Tukang%20Bangunan">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- ======================================== -->
-  <!-- 3. KIRIM BARANG & JASTIP (Segera Hadir)  -->
-  <!-- ======================================== -->
-  <h1 class="category-title">KIRIM BARANG & JASTIP <span class="soon">(Segera Hadir)</span></h1>
-
-  <!-- Kurir Barang -->
-  <div class="service-card">
-    <h2>Kurir Barang</h2>
-    <p>Kurir paket dan dokumen cepat & aman.</p>
-    <ul>
-      <li>Pick-up lokasi Anda</li>
-      <li>Pengiriman cepat</li>
-      <li>Tracking sederhana</li>
-      <li>Harga transparan</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Kurir%20Barang">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Kurir%20Barang">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Belanja Titipan -->
-  <div class="service-card">
-    <h2>Belanja Titipan / Jastip</h2>
-    <p>Layanan titip belanja harian & barang tertentu.</p>
-    <ul>
-      <li>Belanja harian</li>
-      <li>Barang tertentu</li>
-      <li>Proses cepat</li>
-      <li>Transparan</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Belanja%20Titipan">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Belanja%20Titipan">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- ================================ -->
-  <!-- 4. LAYANAN JASA UMUM (Segera Hadir) -->
-  <!-- ================================ -->
-  <h1 class="category-title">LAYANAN JASA UMUM <span class="soon">(Segera Hadir)</span></h1>
-
-  <!-- Asisten Rumah Tangga -->
-  <div class="service-card">
-    <h2>Asisten Rumah Tangga</h2>
-    <p>Tenaga bantuan rumah tangga profesional.</p>
-    <ul>
-      <li>Pekerjaan harian rumah</li>
-      <li>Kebersihan, memasak & merapikan</li>
-      <li>Harian atau bulanan</li>
-      <li>Tenaga terlatih</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Asisten%20Rumah%20Tangga">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Asisten%20Rumah%20Tangga">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Baby Sitter & Perawat Lansia -->
-  <div class="service-card">
-    <h2>Baby Sitter & Perawat Lansia</h2>
-    <p>Tenaga pendamping bayi dan lansia bersertifikat.</p>
-    <ul>
-      <li>Menjaga & merawat</li>
-      <li>Membantu aktivitas harian</li>
-      <li>Pengawasan penuh</li>
-      <li>Bersertifikat</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Baby%20Sitter%20Lansia">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Baby%20Sitter%20dan%20Lansia">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Pijat Panggilan -->
-  <div class="service-card">
-    <h2>Pijat Panggilan</h2>
-    <p>Terapis pijat profesional datang ke rumah Anda.</p>
-    <ul>
-      <li>Terapis pria & wanita</li>
-      <li>Pijat lengkap</li>
-      <li>Aman & steril</li>
-      <li>Datang ke lokasi</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Pijat%20Panggilan">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Pijat%20Panggilan">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Cleaning Service -->
-  <div class="service-card">
-    <h2>Cleaning Service</h2>
-    <p>Petugas kebersihan profesional untuk rumah, kost, kantor & event.</p>
-    <ul>
-      <li>Pembersihan menyeluruh</li>
-      <li>Deep cleaning</li>
-      <li>Rapi & ramah</li>
-      <li>Peralatan lengkap</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Cleaning%20Service">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Cleaning%20Service">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Tenaga Lepas / Asisten Pribadi -->
-  <div class="service-card">
-    <h2>Tenaga Lepas / Asisten Pribadi</h2>
-    <p>Tenaga fleksibel untuk bantuan harian & kebutuhan pribadi.</p>
-    <ul>
-      <li>Membantu aktivitas harian</li>
-      <li>Asisten kerja</li>
-      <li>Fleksibel</li>
-      <li>Amanah</li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Tenaga%20Lepas%20Asisten%20Pribadi">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Tenaga%20Lepas">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
-  <!-- Pembuatan Website -->
-  <div class="service-card">
-    <h2>Pembuatan Website & Sistem</h2>
-    <p>Website modern, cepat, responsif, dan siap pakai untuk bisnis.</p>
-    <ul>
-      <li>Landing Page</li>
-      <li>Website Profil Perusahaan</li>
-      <li>Sistem Admin / HR / Mitra</li>
-      <li>Optimasi Kecepatan & SEO Dasar</li>
-    </ul>
-
-    <h3 class="sub-title">Kelas Pembuatan Website</h3>
-    <ul>
-      <li><b>Kelas 1 — Basic</b></li>
-      <li><b>Kelas 2 — Premium</b></li>
-      <li><b>Kelas 3 — Profesional</b></li>
-      <li><b>Kelas 4 — Bisnis</b></li>
-      <li><b>Kelas 5 — Enterprise</b></li>
-    </ul>
-
-    <div class="apply-box">
-      <a class="btn-primary" target="_blank"
-         href="https://wa.me/628989760020?text=Pembuatan%20Website%20Sistem">
-        Chat via WhatsApp
-      </a>
-      <a class="btn-secondary"
-         href="mailto:kontakassistenku@gmail.com?subject=Pembuatan%20Website">
-        Email Kami
-      </a>
-    </div>
-  </div>
-
+  <p>
+    Assistenku menyediakan layanan asistensi profesional untuk rumah tangga,
+    individu, hingga kebutuhan operasional bisnis. Semua tenaga telah melalui
+    proses seleksi, wawancara, dan pelatihan dasar.
+  </p>
 </section>
+
+<section>
+  <h2>Daftar Layanan</h2>
+
+  <div class="card-grid">
+
+    <!-- ART -->
+    <div class="card">
+      <h3>Asisten Rumah Tangga (ART)</h3>
+      <p>Membantu pekerjaan rumah dengan standar profesional.</p>
+      <ul>
+        <li>Pembersihan rumah</li>
+        <li>Mencuci & menyetrika</li>
+        <li>Memasak dasar</li>
+        <li>Manajemen rumah tangga</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Halo%20Assistenku,%20saya%20ingin%20menanyakan%20layanan%20ART.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20ART">
+           Email Layanan ART
+        </a>
+      </div>
+    </div>
+
+    <!-- Baby Sitter -->
+    <div class="card">
+      <h3>Baby Sitter</h3>
+      <p>Perawatan bayi & balita dengan penuh perhatian.</p>
+      <ul>
+        <li>Perawatan harian</li>
+        <li>Pendamping aktivitas</li>
+        <li>Pengawasan makan & tidur</li>
+        <li>Kebersihan area bayi</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Saya%20ingin%20menanyakan%20layanan%20Baby%20Sitter.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Baby%20Sitter">
+          Email Layanan Baby Sitter
+        </a>
+      </div>
+    </div>
+
+    <!-- Pendamping Lansia -->
+    <div class="card">
+      <h3>Pendamping Lansia</h3>
+      <p>Mendampingi lansia dengan empati dan kesabaran.</p>
+      <ul>
+        <li>Pendamping harian</li>
+        <li>Aktivitas ringan</li>
+        <li>Pendamping berjalan</li>
+        <li>Dukungan emosional & sosial</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20Pendamping%20Lansia.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Pendamping%20Lansia">
+          Email Layanan Lansia
+        </a>
+      </div>
+    </div>
+
+    <!-- Office Boy -->
+    <div class="card">
+      <h3>Office Boy / Girl</h3>
+      <p>Tenaga kebersihan & operasional kantor.</p>
+      <ul>
+        <li>Membersihkan area kantor</li>
+        <li>Penyajian minuman</li>
+        <li>Pengepel</li>
+        <li>Bantuan operasional ringan</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Halo,%20Saya%20ingin%20menanyakan%20layanan%20Office%20Boy.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Office%20Boy">
+          Email Layanan OB/OG
+        </a>
+      </div>
+    </div>
+
+    <!-- Driver -->
+    <div class="card">
+      <h3>Pengemudi Pribadi</h3>
+      <p>Pengemudi profesional dengan standar keamanan tinggi.</p>
+      <ul>
+        <li>Driver keluarga</li>
+        <li>Driver harian</li>
+        <li>Perjalanan dinas</li>
+        <li>Mengemudi aman & defensif</li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20menanyakan%20layanan%20Driver.">
+          Chat via WhatsApp
+        </a>
+        <a class="btn-secondary" target="_blank"
+           href="mailto:kontakassistenku@gmail.com?subject=Info%20Layanan%20Driver">
+          Email Layanan Driver
+        </a>
+      </div>
+    </div>
+
+    <!-- ============================== -->
+    <!--   LAYANAN BARU: WEBSITE        -->
+    <!-- ============================== -->
+
+    <div class="card">
+      <h3>Pembuatan Website & Sistem</h3>
+      <p>Layanan pembuatan website cepat, responsif, modern, dan siap dipakai untuk bisnis.</p>
+
+      <ul>
+        <li>Pembuatan Landing Page</li>
+        <li>Pembuatan Website Profil Perusahaan</li>
+        <li>Pembuatan Sistem (Admin Panel / HR / Mitra)</li>
+        <li>Optimasi kecepatan & SEO dasar</li>
+      </ul>
+
+      <h4 style="margin-top:10px;">Kelas Pembuatan Website</h4>
+      <ul>
+        <li><b>Kelas 1 — Basic</b></li>
+        <li><b>Kelas 2 — Premium</b></li>
+        <li><b>Kelas 3 — Profesional</b></li>
+        <li><b>Kelas 4 — Bisnis</b></li>
+        <li><b>Kelas 5 — Enterprise</b></li>
+      </ul>
+
+      <div class="apply-box">
+        <a class="btn-primary" target="_blank"
+           href="https://wa.me/628989760020?text=Halo,%20saya%20ingin%20membuat%20website%20bersama%20Assistenku.">
+          Chat via WhatsApp
+        </a>
+
+        <a class="btn-secondary" href="/hargawebsite.html">
+          Lihat Biaya Pembuatan Website
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<section>
+  <h2>Catatan & Kebijakan</h2>
+
+  <p>
+    Semua tenaga kerja melalui proses seleksi, pengecekan latar belakang, dan pelatihan dasar sebelum ditempatkan.
+  </p>
+
+  <p>
+    Jadwal kerja dan detail layanan dapat disesuaikan dengan kebutuhan klien.
+  </p>
+</section>
+
+<footer>© 2025 Assistenku</footer>
+
+<script src="/script.js"></script>
+
+</body>
+</html>
